# nasomedia-main-service

./: .gitignore  Dockerfile  docker-compose.yml  makefile  prestart.sh  pyproject.toml
.github/workflows/: docker-image.yml
alembic/: env.py
alembic/versions/: 009943f92899_delete_profile_column_in_author_table.py  2480cfc5e5f9_description_nullable.py  64343ba48eae_delete_profile_column_in_publisher_table.py  8c368a0e779e_add_column_price_to_episode.py  d0efcd477895_init.py
app/: main.py
app/api/v1/: __init__.py  deps.py
app/api/v1/endpoints/: author.py  episode.py  genre.py  publisher.py  series.py  tag.py
app/core/: config.py
app/crud/: __init__.py  author.py  base.py  episode.py  genre.py  publisher.py  series.py  series_author.py  series_genre.py  series_tag.py  tag.py  utils.py
app/db/: __init__.py  base.py  base_class.py  session.py
app/model/: author.py  episode.py  genre.py  publisher.py  series.py  series_author.py  series_genre.py  tag.py
app/models/: __init__.py  author.py  episode.py  genre.py  publisher.py  series.py  series_author.py  series_genre.py  series_tag.py  tag.py
app/schemas/: __init__.py  author.py  episode.py  genre.py  publisher.py  series.py  series_author.py  series_genre.py  series_tag.py  sort_enum.py  tag.py  user.py
